# prototype

./: .gitignore  .pre-commit-config.yaml  README.rst  README_ja.rst  pyproject.toml
.github/workflows/: main.yml
docan/: __init__.py  cli.py
tests/: test_it.py
