[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docan"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Documentation",
  "Topic :: Utilities",
]
dynamic = ["version", "description"]
dependencies = [
  "Click",
  "docutils",
]

[project.optional-dependencies]
doc = [
  "Sphinx ==7.*",
]
test = [
  "pytest",
]

[project.scripts]
docan = "docan.cli:main"

[project.urls]
Home = "https://github.com/docanpy/prototype"

[tool.flit.sdist]
include = ["README_ja.rst"]
